test/samples/invalid/resolving/fresh_out2.maruir
struct Foo {
	x: u32;
	y: u32;
}

fun alloc_foo<'fresh M>(x: u32, y: u32): Foo *M
locals res: Foo *M;
{
	entry:
		res := alloc Foo in M;
		store x in res.x;
		store y in res.y;
		return res;
}

fun main()
locals
	f2: Foo *#memory;
{
	entry:
		f2 := call alloc_foo<#memory>(3_u32, 4_u32);
		return;
		
}
